<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MICMIC Mobile</string>
    <string name="title">MICMIC Mobile</string>
    <string name="subtitle">Streaming de voz USB para o MICMIC Desktop</string>
    <string name="status_label">Conexao com PC</string>
    <string name="status_ready">Pronto para iniciar</string>
    <string name="status_recording">Transmitindo para o PC</string>
    <string name="status_stopped">Parado</string>
    <string name="status_connecting">Tentando conectar ao app do PC...</string>
    <string name="status_reconnecting">Conexao caiu. Reconectando...</string>
    <string name="status_permission_needed">Permissao de microfone necessaria.</string>
    <string name="start">Conectar</string>
    <string name="stop">Parar</string>
    <string name="connection_connected">Conectado</string>
    <string name="connection_connecting">Conectando...</string>
    <string name="connection_reconnecting">Reconectando...</string>
    <string name="connection_disconnected">Desconectado</string>
    <string name="quick_setup_title">Configuracao Rapida</string>
    <string name="hint">1) Conecte USB com depuracao ativa.\n2) No Windows abra o MICMIC e clique START.\n3) Toque em Conectar no celular.\n4) Bolinha verde = link ativo.</string>
    <string name="footer_note">MICMIC 1.0 - pronto para testes finais de publicacao</string>
    <string name="notification_title">MICMIC Mobile</string>
    <string name="notification_text">Transmitindo microfone para o PC</string>
</resources>
